--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header navbar -->
     <header class="header">
       <a href="#" class="header__logo">hofmann</a>
-      <div class="nav">
+      <nav class="nav">
         <ul class="nav__container">
           <li class="nav__item">
             <a href="#" class="nav__link">mission</a>
@@ -25,16 +25,16 @@
             <a href="#" class="nav__link">about</a>
           </li>
         </ul>
-        <button class="nav__btn btn">take a tour</button>
-      </div>
+        <button class="btn nav__btn">take a tour</button>
+      </nav>
     </header>
 
     <!-- banner -->
     <section class="banner">
-      <div class="banner__container">
-        <p class="title banner__title">
+      <div class="container banner__container">
+        <h2 class="title banner__title">
           Choosing The Right Boutique Hotel For You
-        </p>
+        </h2>
         <p class="content banner__content">
           How To Fly A Private Jet On Your Next Trip
         </p>
@@ -44,13 +44,13 @@
           <button class="btn banner__btn">find now</button>
         </div>
         <div class="banner__footer">
-          <div class="banner__container--icon">
+          <div class="banner__container-icon">
             <img src="./img/Plane.png" alt="Plane" class="banner__icon">
           </div>
-          <div class="banner__container--icon">
+          <div class="banner__container-icon">
             <img src="./img/Wallet.png" alt="Wallet" class="banner__icon">
           </div>
-          <div class="banner__container--icon">
+          <div class="banner__container-icon">
             <img src="./img/Case.png" alt="Case" class="banner__icon">
           </div>
         </div>
@@ -59,66 +59,66 @@
 
     <!-- Our Team -->
     <section class="team">
-      <p class="title team__title">Our Team</p>
-      <div class="team__container">
-        <div class="team__container--member">
+      <h2 class="title team__title">Our Team</h2>
+      <div class="container team__container">
+        <div class="team__item">
           <img src="./img/person_1.png" alt="Person" class="team__image">
           <div class="team__content">
-            <p class="team--name">Craig Todd</p>
-            <p class="team--division">CEO</p>
-            <p class="content team__des">
+            <p class="team__name">Craig Todd</p>
+            <p class="team__division">CEO</p>
+            <p class="content team__description">
               Like the majority of sales people,
                I visit a huge number of clients and prospects every month
             </p>
           </div>
         </div>
-        <div class="team__container--member">
+        <div class="team__item">
           <img src="./img/person_2.png" alt="Person" class="team__image">
           <div class="team__content">
-            <p class="team--name">Vera Hopkins</p>
-            <p class="team--division">UX Lead</p>
-            <p class="content team__des">
+            <p class="team__name">Vera Hopkins</p>
+            <p class="team__division">UX Lead</p>
+            <p class="content team__description">
               Differentiate Yourself And Attract
                More Attention Sales And Profits
             </p>
           </div>
         </div>
-        <div class="team__container--member">
+        <div class="team__item">
           <img src="./img/person_3.png" alt="Person" class="team__image">
           <div class="team__content">
-            <p class="team--name">Jennie Graham</p>
-            <p class="team--division">UX/UI Designer</p>
-            <p class="content team__des">
+            <p class="team__name">Jennie Graham</p>
+            <p class="team__division">UX/UI Designer</p>
+            <p class="content team__description">
               WordPress Version 2 0 3 Review
             </p>
           </div>
         </div>
-        <div class="team__container--member">
+        <div class="team__item">
           <img src="./img/person_4.png" alt="Person" class="team__image">
           <div class="team__content">
-            <p class="team--name">Eunice Wong</p>
-            <p class="team--division">Marketing consultant</p>
-            <p class="content team__des">
+            <p class="team__name">Eunice Wong</p>
+            <p class="team__division">Marketing consultant</p>
+            <p class="content team__description">
               Advertising Internet Online Opportunities To Explore
             </p>
           </div>
         </div>
-        <div class="team__container--member">
+        <div class="team__item">
           <img src="./img/person_5.png" alt="Person" class="team__image">
           <div class="team__content">
-            <p class="team--name">Chase Meyer</p>
-            <p class="team--division">Front-end Developer</p>
-            <p class="content team__des">
+            <p class="team__name">Chase Meyer</p>
+            <p class="team__division">Front-end Developer</p>
+            <p class="content team__description">
               Search Engine Optimization And Advertising
             </p>
           </div>
         </div>
-        <div class="team__container--member">
+        <div class="team__item">
           <img src="./img/person_6.png" alt="Person" class="team__image">
           <div class="team__content">
-            <p class="team--name">Johnny Vargas</p>
-            <p class="team--division">Back-end Developer</p>
-            <p class="content team__des">
+            <p class="team__name">Johnny Vargas</p>
+            <p class="team__division">Back-end Developer</p>
+            <p class="content team__description">
               Maintain Your PC S Performance With PC Programs
             </p>
           </div>
@@ -128,8 +128,8 @@
 
     <!-- Pricing -->
     <section class="pricing">
-      <p class="title pricing__title">Choose Your Plan</p>
-      <div class="pricing__container">
+      <h2 class="title pricing__title">Choose Your Plan</h2>
+      <div class="container pricing__container">
         <div class="card card--silver">
           <p class="card__name">silver</p>
           <div class="card__price">
@@ -179,21 +179,21 @@
 
     <!-- Testimonials -->
     <section class="testimonial">
-      <div class="testimonial__container">
-        <div class="testimonial__container--prev">
+      <div class="container testimonial__container">
+        <div class="testimonial__prev">
           <img src="./img/prev.png" alt="Preview" class="prev">
         </div>
-        <div class="testimonial__container--content">
+        <div class="testimonial__container-content">
           <img src="./img/user.png" alt="Avatar" class="testimonial__image">
           <p class="content testimonial__name">Ida Stephens — Noir Project</p>
           <p class="content testimonial__content">
             “Conversations can be a tricky business. Sometimes, decoding what
-             is said with what is meant is difficult at best. However,
+              is said with what is meant is difficult at best. However,
               communication is a necessary tool in todays world. It’s often been
-               the case were one party completely miscommunicates to another
+                the case were one party completely miscommunicates to another
                 due to a misunderstanding between parties.”
           </p>
-          <div class="dotnav">
+          <div class="dot-nav">
             <div class="dot"></div>
             <div class="dot"></div>
             <div class="dot dot--active"></div>
@@ -201,7 +201,7 @@
             <div class="dot"></div>
           </div>
         </div>
-        <div class="testimonial__container--next">
+        <div class="testimonial__next">
           <img src="./img/next.png" alt="Next" class="next">
         </div>
       </div>
@@ -209,12 +209,12 @@
 
     <!-- Advantages -->
     <section class="advantage">
-      <p class="title advantage__title">Advantages</p>
+      <h2 class="title advantage__title">Advantages</h2>
       <p class="content advantage__content">
         One more thing! Any time we start something new it is
          exciting and we are very motivated and committed.
       </p>
-      <div class="advantage__container">
+      <div class="container advantage__container">
         <div class="card">
           <p class="card__name">secure</p>
           <img src="./img/safe.png" alt="Safe" class="card__image">
@@ -249,14 +249,14 @@
 
     <!-- Projects -->
     <section class="project">
-      <p class="title">Places</p>
+      <h2 class="title">Places</h2>
       <div class="project__locative">
         <p class="project__city">san francisco</p>
         <p class="project__city">south liliana</p>
         <p class="project__city">Blickview</p>
         <p class="project__city">new raven</p>
       </div>
-      <div class="project__container">
+      <div class="container project__container">
         <img src="./img/Card_1.png" alt="Card1" class="project__image">
         <img src="./img/Card_2.png" alt="Card2" class="project__image">
         <img src="./img/Card_3.png" alt="Card3" class="project__image">
@@ -268,8 +268,8 @@
 
     <!-- Sign up -->
     <section class="sign-up">
-      <p class="title sign-up__title">Create An Account</p>
-      <div class="sign-up__container">
+      <h2 class="title sign-up__title">Create An Account</h2>
+      <div class="container sign-up__container">
         <div class="card card--sign-up">
           <form action="#" class="sign-up__form">
             <p class="card__name">sign up</p>
@@ -286,14 +286,14 @@
 
     <!-- Contact us -->
     <section class="contact-us">
-      <p class="title contact-us__title">Contact Us</p>
-      <div class="contact-us__container">
+      <h2 class="title contact-us__title">Contact Us</h2>
+      <div class="container contact-us__container">
         <div class="contact-us__get">
           <p class="contact-us__name">Get In Touch</p>
           <div class="contact-us__contact">
             <div class="container__icon">
               <img src="./img/location.png" alt="location"
-               class="icon--location">
+               class="location">
             </div>
             <p class="content contact-us__content">
               2300 W Arbutus Dr Citrus Springs, FL 34434, USA
@@ -301,13 +301,13 @@
           </div>
           <div class="contact-us__contact">
             <div class="container__icon">
-              <img src="./img/mail.png" alt="mail" class="icon--mail">
+              <img src="./img/mail.png" alt="mail" class="mail">
             </div>
             <p class="content contact-us__content">contact@hofmannui.net</p>
           </div>
           <div class="contact-us__contact">
             <div class="container__icon">
-              <img src="./img/phone.png" alt="phone" class="icon--phone">
+              <img src="./img/phone.png" alt="phone" class="phone">
             </div>
             <div class="contact-us__content">
               <p class="content contact-us__number">793-891-7938</p>
@@ -339,16 +339,16 @@
         </div>
         <div class="contact-us__credit">
           <p class="contact-us__name">Credits</p>
-          <p class="content contact-us__credit--content">
+          <p class="content contact-us__credit-content">
             In order to discuss the general function of the logo, we must
              firstly identify and define the environment where this will have
               to fulfill its function.
           </p>
           <p class="contact-us__name">Follow</p>
           <div class="contact-us__follow">
-            <img src="./img/Pinterest.png" alt="Pinterest" class="icon">
-            <img src="./img/linkedin.png" alt="Linkedin" class="icon">
-            <img src="./img/google-plus.png" alt="Google" class="icon">
+            <img src="./img/Pinterest.png" alt="pinterest" class="icon">
+            <img src="./img/linkedin.png" alt="linkedin" class="icon">
+            <img src="./img/google-plus.png" alt="google" class="icon">
             <img src="./img/twitter.png" alt="twitter" class="icon">
             <img src="./img/facebook.png" alt="facebook" class="icon">
             <img src="./img/instagram.png" alt="instagram" class="icon">
@@ -366,18 +366,18 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer__container">
+      <div class="container footer__container">
         <div class="footer__contact">
           <p class="footer__name">Contact us</p>
-          <div class="footer__contact--container">
-            <p class="footer__content footer__contact--address">
+          <div class="footer__container-address">
+            <p class="footer__content footer__address">
               2300 W Arbutus Dr Citrus Springs, FL 34434, USA
             </p>
-            <div class="footer__contact--contact">
-              <p class="footer__content footer__contact--phone">
+            <div class="footer__container-contact">
+              <p class="footer__content footer__phone">
                 +235 793-891-7938
               </p>
-              <p class="footer__content footer__contact--email">
+              <p class="footer__content footer__email">
                 contact@hofmannui.net
               </p>
             </div>
@@ -386,14 +386,14 @@
         <div class="footer__follow">
           <p class="footer__name">follow us</p>
           <div class="footer__icon">
-            <img src="./img/Pinterest_footer.png" alt="Pinterest" class="icon">
+            <img src="./img/Pinterest_footer.png" alt="pinterest" class="icon">
             <img src="./img/twitter_footer.png" alt="twitter" class="icon">
             <img src="./img/facebook_footer.png" alt="facebook" class="icon">
           </div>
         </div>
         <div class="footer__about">
           <p class="footer__name">about us</p>
-          <p class="footer__content footer__about--content">
+          <p class="footer__content footer__about-content">
             Hoffman UI Kit was made to help you quickly create beautiful
              layouts of responsive websites.
           </p>
@@ -420,8 +420,8 @@
       </div>
     </footer>
 
-    <div id="scrolltop">
-      <img src="./img/go-to-top.png" alt="Go to top" id="rectangle">
+    <div class="scroll-top">
+      <img src="./img/go-to-top.png" alt="Go to top" class="rectangle">
     </div>
   </body>
 </html>
