--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./scss/main.scss">
   </head>
   <body>
+    <!-- Header start -->
     <header class="header">
       <div class="header__container-navigation">
         <div class="header__container-logo">
@@ -51,5 +52,49 @@
       <div class="header__space"></div>
       <img src="./img/down-arrow.png" alt="Down arrow" class="down-arrow">
     </header>
+    <!-- Header end -->
+
+    <!-- Advantages start -->
+    <section class="advantage">
+      <h2 class="title advantage__title">Features</h2>
+      <p class="text--large advantage__heading">we're taking it to the next level</p>
+      <div class="advantage__container">
+        <div class="container">
+          <div class="advantage__container-item">
+            <div class="advantage__item">
+              <div class="advantage__wrap-icon">
+                <img src="./img/responsive.png" alt="Responsive" class="advantage__icon">
+              </div>
+              <div class="advantage__wrap-content">
+                <p class="text--large advantage__name">responsive layout</p>
+                <p class="text advantage__content">The past few years have seen a dramatic change in the public perception of cosmetic surgery.</p>
+              </div>
+            </div>
+            <div class="advantage__item">
+              <div class="advantage__wrap-icon">
+                <img src="./img/diamond.png" alt="Diamond" class="advantage__icon">
+              </div>
+              <div class="advantage__wrap-content">
+                <p class="text--large advantage__name">Pixel perfect</p>
+                <p class="text advantage__content">About 64% of all on-line teens say that do things online that they wouldn’t want their parents to know about.</p>
+              </div>
+            </div>
+            <div class="advantage__item">
+              <div class="advantage__wrap-icon">
+                <img src="./img/layers.png" alt="Layers" class="advantage__icon">
+              </div>
+              <div class="advantage__wrap-content">
+                <p class="text--large advantage__name">organized layers</p>
+                <p class="text advantage__content">Are you one of the thousands of Iphone owners who has no idea that they can get free games for their Iphone?</p>
+              </div>
+            </div>
+          </div>
+          <div class="advantage__wrap-image">
+            <img src="./img/mac.png" alt="Mac" class="advantage__mac">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Advantages end -->
   </body>
 </html>
