--- a/index.html
+++ b/index.html
@@ -96,5 +96,14 @@
       </div>
     </section>
     <!-- Advantages end -->
+
+    <!-- CTA start -->
+    <section class="cta">
+      <div class="container cta__container">
+        <h2 class="title text--white cta__title">Get Your Free Version</h2>
+        <p class="text text--white cta__content">Having used discount toner cartridges for twenty years, there have been a lot of changes in the toner cartridge market. The market today is approximately a twenty billion dollar business.</p>
+        <button class="btn cta__btn">download</button>
+      </div>
+    </section>
   </body>
 </html>
