--- a/index.html
+++ b/index.html
@@ -105,5 +105,74 @@
         <button class="btn cta__btn">download</button>
       </div>
     </section>
+    <!-- CTA end -->
+
+    <!-- Testimonials start -->
+    <section class="testimonial">
+      <h2 class="title testimonial__title">Testimonials</h2>
+      <div class="container testimonial__container">
+        <div class="testimonial__item">
+          <div class="testimonial__wrap-image">
+            <img src="./img/person-1.png" alt="Person" class="testimonial__image">
+          </div>
+          <div class="testimonial__wrap-content">
+            <p class="text--large testimonial__name">lulu hoffman</p>
+            <p class="text--large testimonial__division">Marketing Consultant at okodesign.net</p>
+            <p class="text testimonial__description">If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like the wind, opinions change…like the weather, opinions change frequently.</p>
+            <div class="testimonial__wrap-icon">
+              <img src="./img/linkedin-yellow.png" alt="Linkedin" class="testimonial__icon">
+              <img src="./img/twitter-yellow.png" alt="Twitter" class="testimonial__icon">
+              <img src="./img/google-plus-yellow.png" alt="Google Plus" class="testimonial__icon">
+            </div>
+          </div>
+        </div>
+        <div class="testimonial__item">
+          <div class="testimonial__wrap-image">
+            <img src="./img/person-2.png" alt="Person" class="testimonial__image">
+          </div>
+          <div class="testimonial__wrap-content">
+            <p class="text--large testimonial__name">elsie dunkan</p>
+            <p class="text--large testimonial__division">Project Manager at okodesign.net</p>
+            <p class="text testimonial__description">Ever heard of the Fuller Brush Man? You know, those legendary guys who came knocking on the front doors of America, selling brushes, mops and cleaners?</p>
+            <div class="testimonial__wrap-icon">
+              <img src="./img/facebook-yellow.png" alt="Facebook" class="testimonial__icon">
+              <img src="./img/twitter-yellow.png" alt="Twitter" class="testimonial__icon">
+            </div>
+          </div>
+        </div>
+        <div class="testimonial__item">
+          <div class="testimonial__wrap-image">
+            <img src="./img/person-3.png" alt="Person" class="testimonial__image">
+          </div>
+          <div class="testimonial__wrap-content">
+            <p class="text--large testimonial__name">dustin gonzales</p>
+            <p class="text--large testimonial__division">CEO at hofmannui.net</p>
+            <p class="text testimonial__description">Do you remember the story of “The Wizard of Oz”? In this story we saw the characters of Dorothy, who had wanted to run away from home because she thought there was a better place somewhere.</p>
+            <div class="testimonial__wrap-icon">
+              <img src="./img/facebook-yellow.png" alt="Facebook" class="testimonial__icon">
+              <img src="./img/linkedin-yellow.png" alt="Linkedin" class="testimonial__icon">
+              <img src="./img/google-plus-yellow.png" alt="Google Plus" class="testimonial__icon">
+            </div>
+          </div>
+        </div>
+        <div class="testimonial__item">
+          <div class="testimonial__wrap-image">
+            <img src="./img/person-4.png" alt="Person" class="testimonial__image">
+          </div>
+          <div class="testimonial__wrap-content">
+            <p class="text--large testimonial__name">laura parks</p>
+            <p class="text--large testimonial__division">UX Lead at hofmannui.net</p>
+            <p class="text testimonial__description">They are big, bold and beautiful. Billboards have been around for quite a while. In almost all places nowadays you can find billboards of just about every product there is in the market. No matter how you see it, billboard advertising is on the rise.</p>
+            <div class="testimonial__wrap-icon">
+              <img src="./img/facebook-yellow.png" alt="Facebook" class="testimonial__icon">
+              <img src="./img/linkedin-yellow.png" alt="Linkedin" class="testimonial__icon">
+              <img src="./img/twitter-yellow.png" alt="Twitter" class="testimonial__icon">
+              <img src="./img/google-plus-yellow.png" alt="Google Plus" class="testimonial__icon">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Testimonials end -->
   </body>
 </html>
