--- a/index.html
+++ b/index.html
@@ -174,5 +174,57 @@
       </div>
     </section>
     <!-- Testimonials end -->
+
+    <!-- Pricing start -->
+    <section class="pricing">
+      <h2 class="title pricing__title">Choose Your Plan</h2>
+      <div class="container pricing__container">
+        <div class="card card--silver">
+          <p class="text--large card__name">silver</p>
+          <div class="card__price">
+            <p class="text text--white card__dollar">$</p>
+            <p class="text--white card__number">49</p>
+          </div>
+          <p class="text--large text--white card__date">year</p>
+          <p class="text text--white card__content">Personal Account</p>
+          <p class="text text--white card__content">25 GB Discspace</p>
+          <p class="text text--white card__content">50 Uploads per day</p>
+          <button class="btn card__button">purchase</button>
+        </div>
+        <div class="card card--gold">
+          <p class="text--large card__name card__name--gold">gold</p>
+          <div class="card__price">
+            <p class="text card__dollar">$</p>
+            <p class="text card__number">99</p>
+          </div>
+          <p class="text--large card__date">year</p>
+          <p class="text card__content">
+            Personal Account
+          </p>
+          <p class="text card__content">
+            50 GB Discspace
+          </p>
+          <p class="text card__content">
+            500 Uploads per day
+          </p>
+          <button class="btn btn--black card__button">
+            purchase
+          </button>
+        </div>
+        <div class="card card--platinum">
+          <p class="text--large card__name">platinum</p>
+          <div class="card__price">
+            <p class="text text--white card__dollar">$</p>
+            <p class="text--white card__number">299</p>
+          </div>
+          <p class="text--large text--white card__date">year</p>
+          <p class="text text--white card__content">Team Account</p>
+          <p class="text text--white card__content">500 GB Discspace</p>
+          <p class="text text--white card__content">Unlimited Uploads per day</p>
+          <button class="btn card__button">purchase</button>
+        </div>
+      </div>
+    </section>
+    <!-- Pricing end -->
   </body>
 </html>
