--- a/index.html
+++ b/index.html
@@ -226,5 +226,235 @@
       </div>
     </section>
     <!-- Pricing end -->
+
+    <!-- Project start -->
+    <section class="project">
+      <h2 class="title project__title">Portfolio</h2>
+      <div class="container project__container">
+        <div class="project__container-item">
+          <div class="project__item project__meadow">
+            <img src="./img/project-card-1.png" alt="Project 1" class="project__image">
+            <div class="project__wrap-content">
+              <div class="project__content">
+                <div class="project__wrap-heading">
+                  <p class="text--white project__heading">Mountains</p>
+                  <div class="project__wrap-view view-heading">
+                    <img src="./img/Views.png" alt="View" class="view">
+                  </div>
+                </div>
+                <p class="text--large text--white project__sub-heading">17 Apr 2016</p>
+                <div class="rectangle"></div>
+                <p class="text text--white project__description">
+                  Planning a vacation to Europe? No doubt you have certain expectations about your upcoming journey.
+                </p>
+                <div class="project__info">
+                  <div class="project__wrap-view">
+                    <img src="./img/Views.png" alt="View" class="view">
+                    <p class="text text--white view-number">92924</p>
+                  </div>
+                  <div class="project__wrap-like">
+                    <img src="./img/likes.png" alt="Like" class="like">
+                    <p class="text text--white like-number">1273</p>
+                  </div>
+                  <div class="project__wrap-comment">
+                    <img src="./img/comments.png" alt="Comment" class="comment">
+                    <p class="text text--white comment-number">4894</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project__item project__mud">
+            <img src="./img/project-card-4.png" alt="Project 2" class="project__image">
+            <div class="project__wrap-content">
+              <div class="project__content">
+                <div class="project__wrap-heading">
+                  <p class="text--white project__heading">Mountains</p>
+                  <div class="project__wrap-view view-heading">
+                    <img src="./img/Views.png" alt="View" class="view">
+                  </div>
+                </div>
+                <p class="text--large text--white project__sub-heading">17 Apr 2016</p>
+                <div class="rectangle"></div>
+                <p class="text text--white project__description">
+                  Planning a vacation to Europe? No doubt you have certain expectations about your upcoming journey.
+                </p>
+                <div class="project__info">
+                  <div class="project__wrap-view">
+                    <img src="./img/Views.png" alt="View" class="view">
+                    <p class="text text--white view-number">92924</p>
+                  </div>
+                  <div class="project__wrap-like">
+                    <img src="./img/likes.png" alt="Like" class="like">
+                    <p class="text text--white like-number">1273</p>
+                  </div>
+                  <div class="project__wrap-comment">
+                    <img src="./img/comments.png" alt="Comment" class="comment">
+                    <p class="text text--white comment-number">4894</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project__item project__item--large project__mountain">
+            <img src="./img/project-card-2.png" alt="Project 3" class="project__image">
+            <div class="project__wrap-content project__wrap-content--large">
+              <div class="project__content">
+                <div class="project__wrap-heading">
+                  <p class="text--white project__heading">Blue Mountains</p>
+                  <div class="project__wrap-view view-heading">
+                    <img src="./img/Views.png" alt="View" class="view">
+                  </div>
+                </div>
+                <p class="text--large text--white project__sub-heading">17 Apr 2016</p>
+                <div class="rectangle"></div>
+                <p class="text text--white project__description">
+                  Planning a vacation to Europe? No doubt you have certain expectations about your upcoming journey.
+                </p>
+                <div class="project__info">
+                  <div class="project__wrap-view">
+                    <img src="./img/Views.png" alt="View" class="view">
+                    <p class="text text--white view-number">92924</p>
+                  </div>
+                  <div class="project__wrap-like">
+                    <img src="./img/likes.png" alt="Like" class="like">
+                    <p class="text text--white like-number">1273</p>
+                  </div>
+                  <div class="project__wrap-comment">
+                    <img src="./img/comments.png" alt="Comment" class="comment">
+                    <p class="text text--white comment-number">4894</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project__item project__valley">
+            <img src="./img/project-card-6.png" alt="Project 4" class="project__image">
+            <div class="project__wrap-content">
+              <div class="project__content">
+                <div class="project__wrap-heading">
+                  <p class="text--white project__heading">Mountains</p>
+                  <div class="project__wrap-view view-heading">
+                    <img src="./img/Views.png" alt="View" class="view">
+                  </div>
+                </div>
+                <p class="text--large text--white project__sub-heading">17 Apr 2016</p>
+                <div class="rectangle"></div>
+                <p class="text text--white project__description">
+                  Planning a vacation to Europe? No doubt you have certain expectations about your upcoming journey.
+                </p>
+                <div class="project__info">
+                  <div class="project__wrap-view">
+                    <img src="./img/Views.png" alt="View" class="view">
+                    <p class="text text--white view-number">92924</p>
+                  </div>
+                  <div class="project__wrap-like">
+                    <img src="./img/likes.png" alt="Like" class="like">
+                    <p class="text text--white like-number">1273</p>
+                  </div>
+                  <div class="project__wrap-comment">
+                    <img src="./img/comments.png" alt="Comment" class="comment">
+                    <p class="text text--white comment-number">4894</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project__item project__river">
+            <img src="./img/project-card-5.png" alt="Project 5" class="project__image">
+            <div class="project__wrap-content">
+              <div class="project__content">
+                <div class="project__wrap-heading">
+                  <p class="text--white project__heading">Mountains</p>
+                  <div class="project__wrap-view view-heading">
+                    <img src="./img/Views.png" alt="View" class="view">
+                  </div>
+                </div>
+                <p class="text--large text--white project__sub-heading">17 Apr 2016</p>
+                <div class="rectangle"></div>
+                <p class="text text--white project__description">
+                  Planning a vacation to Europe? No doubt you have certain expectations about your upcoming journey.
+                </p>
+                <div class="project__info">
+                  <div class="project__wrap-view">
+                    <img src="./img/Views.png" alt="View" class="view">
+                    <p class="text text--white view-number">92924</p>
+                  </div>
+                  <div class="project__wrap-like">
+                    <img src="./img/likes.png" alt="Like" class="like">
+                    <p class="text text--white like-number">1273</p>
+                  </div>
+                  <div class="project__wrap-comment">
+                    <img src="./img/comments.png" alt="Comment" class="comment">
+                    <p class="text text--white comment-number">4894</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project__item project__snow project__item--large">
+            <img src="./img/project-card-3.png" alt="Project 6" class="project__image">
+            <div class="project__wrap-content project__wrap-content--large">
+              <div class="project__content">
+                <div class="project__wrap-heading">
+                  <p class="text--white project__heading">Blue Mountains</p>
+                  <div class="project__wrap-view view-heading">
+                    <img src="./img/Views.png" alt="View" class="view">
+                  </div>
+                </div>
+                <p class="text--large text--white project__sub-heading">17 Apr 2016</p>
+                <div class="rectangle"></div>
+                <p class="text text--white project__description">
+                  Planning a vacation to Europe? No doubt you have certain expectations about your upcoming journey.
+                </p>
+                <div class="project__info">
+                  <div class="project__wrap-view">
+                    <img src="./img/Views.png" alt="View" class="view">
+                    <p class="text text--white view-number">92924</p>
+                  </div>
+                  <div class="project__wrap-like">
+                    <img src="./img/likes.png" alt="Like" class="like">
+                    <p class="text text--white like-number">1273</p>
+                  </div>
+                  <div class="project__wrap-comment">
+                    <img src="./img/comments.png" alt="Comment" class="comment">
+                    <p class="text text--white comment-number">4894</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project__item project__item--white">
+            <div class="project__content project__content--white">
+              <p class="project__heading">Scenery Photos</p>
+              <p class="text--large project__sub-heading">BY EVGENY METILAN</p>
+              <div class="rectangle rectangle--black"></div>
+              <p class="project__wild">Wild Nature</p>
+            </div>
+          </div>
+        </div>
+        <div class="project__pagination">
+          <div class="project__wrap-prev">
+            <img src="./img/prev.png" alt="Prev" class="prev">
+          </div>
+          <div class="project_wrap-number">
+            <p class="project__number">1</p>
+          </div>
+          <div class="project_wrap-number">
+            <p class="project__number">2</p>
+          </div>
+          <div class="project_wrap-number">
+            <p class="project__number">3</p>
+          </div>
+          <div class="project_wrap-number">
+            <p class="project__number project__number--active">4</p>
+          </div>
+          <div class="project__wrap-next">
+            <img src="./img/next.png" alt="Next" class="next">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Project end -->
   </body>
 </html>
