--- a/index.html
+++ b/index.html
@@ -456,5 +456,24 @@
       </div>
     </section>
     <!-- Project end -->
+
+    <!-- Team start -->
+    <section class="team">
+      <div class="container team__container">
+        <p class="text--white team__heading">Gregory Francis</p>
+        <p class="text--large text--white team__sub-heading">CHIEF ENGINEER</p>
+        <div class="team__wrap-content">
+          <p class="text text--white team__description">I’ve started to work in company at 2009. Photographs are a way of preserving a moment in our lives for the rest of our lives. Many of us have at least been tempted at the flashy array of photo printers which seemingly leap off the shelves at even the least tech-savvy. It surely seems old fashioned to talk about 35mm film and non-digital cameras in today’s day and age.</p>
+          <div class="team__dot-nav">
+            <div class="team__dot team__dot--active"></div>
+            <div class="team__dot"></div>
+            <div class="team__dot"></div>
+            <div class="team__dot"></div>
+            <div class="team__dot"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Team end -->
   </body>
 </html>
