--- a/index.html
+++ b/index.html
@@ -475,5 +475,45 @@
       </div>
     </section>
     <!-- Team end -->
+
+    <!-- Contact start -->
+    <section class="contact">
+      <h2 class="title contact__title">Stay In Touch</h2>
+      <div class="container contact__container">
+        <div class="contact__wrap-image">
+          <img src="./img/iPhoneApp.png" alt="Iphone" class="contact__image">
+        </div>
+        <div class="form contact__form">
+          <div class="form__name-email">
+            <input type="text" placeholder="Name*" class="text form__name">
+            <input type="text" placeholder="Email*" class="text form__email">
+          </div>
+          <input type="text" placeholder="Message*" class="text form__message">
+          <button class="btn form__button">submit</button>
+        </div>
+        <div class="contact__detail">
+          <div class="contact__wrap-content">
+            <img src="./img/location.png" alt="Location" class="contact__icon icon-location">
+              <p class="text contact__content">2300 W Arbutus Dr Citrus Springs, FL 34434, USA</p>
+          </div>
+          <div class="contact__wrap-content">
+            <img src="./img/mail.png" alt="Email" class="contact__icon icon-email">
+              <p class="text contact__content">contact@hofmannui.net</p>
+          </div>
+          <div class="contact__wrap-content">
+            <img src="./img/phone.png" alt="Phone" class="contact__icon icon-phone">
+              <p class="text contact__content">793-891-7938, 952-775-6021</p>
+          </div>
+          <div class="contact__wrap-social">
+            <img src="./img/Pinterest.png" alt="Pinterest" class="icon-social contact__pinterest">
+            <img src="./img/linkedin.png" alt="Linkedin" class="icon-social contact__linkedin">
+            <img src="./img/google-plus.png" alt="Google Plus" class="contact__google">
+            <img src="./img/twitter.png" alt="Twitter" class="icon-social contact__twitter">
+            <img src="./img/facebook.png" alt="Facebook" class="icon-social contact__facebook">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Contact end -->
   </body>
 </html>
